[package]
name = "pdtclient"
version = "0.0.1"
authors = ["Erik Källberg"]
edition = "2021"

[dependencies]
pdtcore = { path = "../pdtcore" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-logfmt = { version = "0.3.3", features = ["ansi_logs"] }
nix = { version = "0.27.1", features = ["feature"] }
humantime = "2.1.0"
