[package]
name = "pdtserver"
version = "0.0.1"
authors = ["Erik Källberg"]
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
pdtcore = { path = "../pdtcore" }
askama = "0.12.0"
ulid = { version = "1.1.0", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-logfmt = { version = "0.3.3", features = ["ansi_logs"] }
