[package]
name = "pdtserver"
version = "0.0.1"
authors = ["Erik Källberg"]
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
pdtcore = { path = "../pdtcore" }
askama = { version = "0.12.0", features = ["with-axum"] }
ulid = { version = "1.1.0", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-logfmt = { version = "0.3.3", features = ["ansi_logs"] }
askama_axum = "0.3.0"
